--- a/biography.html
+++ b/biography.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-3w" style="background-image: url(assets/images/revised-2000x906.jpg); padding-top: 160px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Maker</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-3w" style="background-image: url(assets/images/revised-2000x906.jpg); padding-top: 160px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -175,7 +175,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thank you for subscribing</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="SUBSCRIBE FORM">
-                        <input type="hidden" value="uwLbtvrOO6VaiwW9diP0Nmc50vjmI4zfgjD1PfEyPhZH4hQxrmBFbUJYOIWcm9z17K7+BykuV01InjaZ/fqCAXIA/1JeM3neP8azhkxuS63tQZQeaIi0nFVgSEgzH2rp" data-form-email="true">
+                        <input type="hidden" value="GCLiJc065mr84og7hYpnpHpZMjfXefzwfKYQeQMiQ4dO9WKPucqx1FYE9AWyiZd/DCakLBrV2mBIf2s6dw+c04J2Ut9ahPpCVby5PGyUYEcfWVyGcRvVp/ANZpZTL/XZ" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-5a-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-black">SUBSCRIBE</button></span>
@@ -208,7 +208,7 @@ Phone: (786)-239-7707<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="Cv1FUvCBqjAoPlp3qHl4tckxnl32xQQOjHz3EiSNCCFnepYU9mzWdnOaSKu35PQ9C7fTKsGfVWO8/jdjCpwUNb/gRCAXOFg7ZtsiM97VxyprxBFHoFK1EKKorryEfenu" data-form-email="true">
+                    <input type="hidden" value="WI8am71LziRFBuvL3sapsG1XBtrGrgz9Trw6PZUqVtCHQLrcfn/6PN+3mIIDT5DLnXlKhA5hHMNfN8v1JPZQ/lkPcdRJA7UDi1QH/vzW4lvCUQzjjhHJjHcxb4V8l32T" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2p-name">
