--- a/illustrator.html
+++ b/illustrator.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1n" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1n" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -250,7 +250,7 @@
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/vw-logo-2-2000x2000.jpg">
                         </div><div class="carousel-item">
-                            <img alt="" src="assets/images/aruba-postcard-2-2000x20007.jpg">
+                            <img alt="" src="assets/images/aruba-postcard-2-2000x20003.jpg">
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/doodle-for-google-website-2000x2000-1.jpg">
                         </div><div class="carousel-item">
@@ -328,7 +328,7 @@ Phone: (786)-239-7707<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="LGuM+/RPPAjbsrV7JDqedPTo2BvfOsi4slqRQDcT8XY0jqfY7I5Me96GnV9S1EU9ZDoel9VghBn9K+Bg0B5RIQ4lbI2qWlIR+TxZCACzJLOUl6RKTBKvsL2dkh1uEsja" data-form-email="true">
+                    <input type="hidden" value="39UkfHXHac3PPY0iDX5TuKc4i0T3p33SIOJhS+S0KQWx+/FQ1BEC+T/O+CNFACfOgNGoraiXbnI8Z0F4bAhBSEsRWaWit1hJqHXYEqeE3E+00c6lVJ9nRkDHEEMLfVOX" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2j-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2j-name">
