--- a/photoshop.html
+++ b/photoshop.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1o" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1o" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -476,9 +476,9 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item">
-                            <img alt="" src="assets/images/buster3-website-2000x20004.jpg">
+                            <img alt="" src="assets/images/buster3-website-2000x20000.jpg">
                         </div><div class="carousel-item">
-                            <img alt="" src="assets/images/buster-4-website-2000x20005.jpg">
+                            <img alt="" src="assets/images/buster-4-website-2000x20001.jpg">
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/rainbow-connection-website-2000x2000.jpg">
                         </div><div class="carousel-item">
@@ -496,7 +496,7 @@
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/julian-guas-perspective-imagery-website-2000x2000.jpg">
                         </div><div class="carousel-item">
-                            <img alt="" src="assets/images/project-3-illusion-2-website-2000x20006.jpg">
+                            <img alt="" src="assets/images/project-3-illusion-2-website-2000x20002.jpg">
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/bengal-tiger-website-1-2000x2000.jpg">
                         </div><div class="carousel-item">
@@ -920,7 +920,7 @@ Phone: (786)-239-7707<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="BKe7jCcG+e3ADBY7npGlzpVNmIowvlhqBJNCf05sIEYcoIsnjUoNzvJn+Gtwf5KYFYjXkPAEWpbMVIPZpI3y7E6dvX24OGIIFYsHrQ4HQkz/raKqCsVcq2OEFwMTSqti" data-form-email="true">
+                    <input type="hidden" value="Byf8Z7qlIr7HISzSpGQ2a/sVxVSY1SEI5C9LFu/yCGXwiRmQoVPb43M6o9vICEsSacy9CS9mKTBTEbq8qD3+Gku/tV9JSbq0aRGmsGG6KAYhB83X8Q6Ny0Xq+JgZQdO2" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2j-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2j-name">
